fix: update body background color to improve visibility

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #F2D411;
+	background-color: #F6D31A;
 	color: #000;
 }
 
